# FlowIntelligence

./: .gitignore  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  README_simple.md  analyze_match_results.py  build_enhanced.sh.backup  build_optimized.sh  run.sh
build_enhanced_bak/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  FlowIntelligence  FlowIntelligenceConfig.cmake  FlowIntelligenceEnhanced  Makefile  TimeAlignmentTest  cmake_install.cmake
build_simple/: FlowIntelligence  Makefile  cmake_install.cmake
examples/: enhanced_matching_example.cpp  test_time_alignment.cpp
include/: bidirectional_matcher.h  distance_calculator.h  enhanced_video_matcher.h  feature_extractor.h  hierarchical_matcher.h  match_propagator.h  match_quality_assessor.h  motion_detector.h  parameters.h  temporal_consistency_enforcer.h  time_alignment.h  video_matcher.h
pyVersion/: README_pseudo_multimodal3.md  batch_multimodal.py  distance_metric.py  getFirstFrame.py  main.py  parameters.py  pseudo_multimodal.py  pseudo_multimodal2.py  pseudo_multimodal3.py  rename_videos.py  segment_match.py  simple_batch_multimodal.py  simple_video_resize.py  test.py  utils.py
pyVersion/utils/: getFirstFrame.py  pseudo_multimodal.py  pseudo_multimodal2.py  pseudo_multimodal3.py  rename_videos.py  simple_video_resize.py
src/: bidirectional_matcher.cpp  distance_calculator.cpp  enhanced_video_matcher.cpp  feature_extractor.cpp  main.cpp  match_quality_assessor.cpp  segment_matcher.cpp  simd_optimizer.cpp  temporal_consistency_enforcer.cpp  time_alignment.cpp  video_matcher.cpp  video_matcher_utils.cpp
utils/: README.md  README_complete_workflow.md  README_perspective_augmentation.md  README_visualization.md  analyze_match_results.py  calculate_relative_transforms.py  demo_directory_structure.py  example_perspective_usage.py  example_relative_transforms_usage.py  generate_identity_matrices.py  get_img_from_video.py  perspective_augmentation.py  test_relative_transform_math.py  visualize_match_results.py
